# YoutubeDL-Helper

./: .bumpversion.cfg  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
tests/: __init__.py  test_youtubedl_helper.py
youtubedl_helper/: YTDLLogger.py  YTDLThread.py  __init__.py  cli.py  youtubedl_helper.py
