[tool.black]
line-length = 79
target-version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.poetry]
name = "YoutubeDL Helper"
description="Helper python script to ease automation with Youtube DL"
version = "0.1.0"
authors = ["Zachary Myers <zachmyers3@gmail.com>"]
readme = "README.md"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = "youtubedl_helper" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
typer = "^0.3.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
pytest = "^5.4.3"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
